welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:3: error: ';' expected but '{' found.
while (!estFaceMur()){
                     ^